--- a/Module_02/Activity/index.html
+++ b/Module_02/Activity/index.html
@@ -1,12 +1,31 @@
 var val1=parseInt(val1)
 var val2=parseInt(val2)
-var addingCalc=val1+val2
-var multipleCalc=val1*val2
-var tripleCalc=(val1+val2)*3
+var addingCalc=parseInt(addingCalc)
 var val1=parseInt(prompt("Enter first number",0));
 var val2=parseInt(prompt("Enter second number"))
+addingCalc=val1+val2
 document.write("The first numer is: " +val1);
 document.write("<br>The second number is: " +val2);
 document.write("<br>The numbers added " +val1+ "+" +val2+ "=" +addingCalc);
+
+
+var val1=parseInt(val1)
+var val2=parseInt(val2)
+var multipleCalc=parseInt(multipleCalc)
+var val1=parseInt(prompt("Enter first number",0));
+var val2=parseInt(prompt("Enter second number"))
+multipleCalc=val1*val2
+document.write("<br><br>The first numer is: " +val1);
+document.write("<br>The second number is: " +val2);
 document.write("<br>The numbers multipled " +val1+ "*" +val2+ "=" +multipleCalc);
-document.write("<br>The sum of the numbers multipled by 3 " +val1+ "+" +val2+ "* 3 =" +tripleCalc);
+
+
+var val1=parseInt(val1)
+var val2=parseInt(val2)
+var tripleCalc=parseInt(tripleCalc)
+var val1=parseInt(prompt("Enter first number",0));
+var val2=parseInt(prompt("Enter second number"))
+tripleCalc=(val1+val2)*3
+document.write("<br><br>The first numer is: " +val1);
+document.write("<br>The second number is: " +val2);
+document.write("<br>The numbers multipled " +val1+ "+" +val2+ "multipled by three =" +tripleCalc);
